name:                sonoda-san
version:             0.1.0.0
synopsis:            A LINE bot likely having something to do with Sonoda Umi
description:         Please see README.md
homepage:            https://github.com/noraesae/sonoda-san
license:             BSD3
license-file:        LICENSE
author:              Jun
maintainer:          me@noraesae.net
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cmd
                       Config
                       Line.Webhook
                       Line.Webhook.Types
                       Response
                       Server
                       Server.Webhook
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , optparse-applicative
                     , yaml
                     , http-types
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable sonoda
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sonoda-san
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite sonoda-san-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sonoda-san
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noraesae/sonoda-san
